# manderrow

./: .prettierrc  README.md  deno.json  index.html  justfile  mise.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml  publish.yml
agent/: README.md  build.zig  build.zig.zon
agent/src/: Args.zig  crash.zig  ipc.zig  paths.zig  root.zig  rs.zig  stdio.zig  time.zig  util.zig  windows.zig  wine_unixlib_host.zig  wine_unixlib_proto.zig  winelib_proto.zig
agent/src/rs/: ipc_channel.zig  proto.zig  wine_unixlib.zig  winelib.zig
agent/src/util/: posix.zig  windows.zig
crates/: Cargo.toml
crates/agent/: Cargo.toml  build.rs
crates/agent/dll_proxy/: dll_proxy.lib  dll_proxy_gnu.lib  dll_proxy_msvc.lib
crates/agent/src/: crash.rs  externs.rs  init.rs  lib.rs
crates/args/: Cargo.toml
crates/args/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  doctor.rs  lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/manderrow-macros/: Cargo.toml
crates/manderrow-macros/src/: lib.rs
crates/packed-semver/: Cargo.toml
crates/packed-semver/src/: lib.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/process-util/: Cargo.toml
crates/process-util/src/: lib.rs  wait_group.rs
crates/scripts/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: agent.rs  games.rs  lib.rs  util.rs
crates/types/src/mods/: mod.rs  spec.rs  timestamp.rs
crates/types/src/util/: rkyv.rs  serde.rs
crates/types/src/util/rkyv/: intern.rs
crates/wrapper-stage2/: Cargo.toml  README.md
crates/wrapper-stage2/src/: main.rs
public/pages/: splashscreen.html
scripts/: generate_loader.rs
scripts/game-updater/: deno.json  main.ts
scripts/game-updater/src/: addGames.ts  games.ts  modDownloads.ts  osSupport.ts  paths.ts  reviewCounts.ts  thunderstore.ts
scripts/game_updater/: addGames.ts  deno.json  steam-scraper.js  steamScraper.ts  types.d.ts  updateGames.ts
src/: App.css  App.tsx  AppLoaded.tsx  ModList.module.css  api.ts  console.ts  globals.ts  index.tsx  types.d.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  splashscreen.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_commands.rs  bench_commands.rs  commands.rs  error.rs  gameModDownloads.json  gameReviews.json  game_reviews.rs  games.json  games.rs  http.rs  i18n.rs  ipc.rs  launching.rs  lib.rs  main.rs  mod_index.rs  mods.rs  paths.rs  splashscreen.rs  util.rs  window_state.rs  windows_util.rs  wrap.rs  wrap_with_injection.rs  wrap_with_ipc.rs
src-tauri/src/commands/: close_splashscreen.rs  games.rs  i18n.rs  import.rs  ipc.rs  mod_index.rs  profiles.rs
src-tauri/src/commands/mod_index/: memory.rs
src-tauri/src/configs/: commands.rs  mod.rs
src-tauri/src/games/: commands.rs  gameModDownloads.json  gameReviews.json  games.json  mod.rs
src-tauri/src/importing/: commands.rs  mod.rs  thunderstore.rs
src-tauri/src/installing/: commands.rs  index.rs  mod.rs
src-tauri/src/ipc/: commands.rs  mod.rs
src-tauri/src/launching/: bep_in_ex.rs  commands.rs  melon_loader.rs  mod.rs
src-tauri/src/launching/steam/: mod.rs  paths.rs  proton.rs
src-tauri/src/launching/steam/reg_mod_samples/: 02-in.reg
src-tauri/src/mod_index/: commands.rs  dump.rs  memory.rs  mod.rs  thunderstore.rs
src-tauri/src/mod_index/thunderstore/: commands.rs
src-tauri/src/mods/: mod.rs  spec.rs  version.rs
src-tauri/src/profiles/: commands.rs  mod.rs
src-tauri/src/settings/: commands.rs  mod.rs  ui.rs
src-tauri/src/stores/steam/: launching.rs  mod.rs  paths.rs  proton.rs
src-tauri/src/stores/steam/reg_mod_samples/: 01-in.reg  03-in.reg
src-tauri/src/tasks/: commands.rs  mod.rs  types.rs
src-tauri/src/util/: http.rs  iter.rs  locks.rs  markdown.rs  mod.rs  process.rs  progress.rs  rkyv.rs  serde.rs  windows.rs
src-tauri/src/util/rkyv/: intern.rs
src-tauri/src/util/search/: backend_fuzzy_matcher.rs  backend_rff.rs  backend_sublime_fuzzy.rs  mod.rs
src/api/: api.ts  app.ts  configs.ts  console.ts  installing.ts  ipc.ts  launching.ts  settings.ts  tasks.ts
src/api/mod_index/: thunderstore.ts
src/api/settings/: ui.ts
src/components/: Console.module.css  Console.tsx  Dialog.module.css  Dialog.tsx  ErrorBoundary.tsx  ErrorDialog.tsx  SortableList.module.css  SortableList.tsx  TasksDialog.tsx  TitleBar.module.css  TitleBar.tsx
src/components/global/: AsyncButton.module.css  AsyncButton.tsx  Checkbox.module.css  Checkbox.tsx  Console.module.css  Console.tsx  ContextMenu.module.css  ContextMenu.tsx  Dialog.module.css  Dialog.tsx  Directives.tsx  Dropdown.module.css  Dropdown.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  ErrorDialog.module.css  ErrorDialog.tsx  FloatingElement.tsx  Markdown.tsx  MultistageModel.module.css  MultistageModel.tsx  Progress.module.css  Progress.tsx  SelectDropdown.module.css  SelectDropdown.tsx  SettingsDialog.module.css  SettingsDialog.tsx  SortableList.module.css  SortableList.tsx  TabRenderer.module.css  TabRenderer.tsx  TasksDialog.module.css  TasksDialog.tsx  TitleBar.module.css  TitleBar.tsx  TogglableDropdown.module.css  TogglableDropdown.tsx  Tooltip.module.css  Tooltip.tsx
src/components/profile/: ConfigEditor.module.css  ConfigEditor.tsx  ImportDialog.module.css  ImportDialog.tsx  ModList.module.css  ModList.tsx  ModMarkdown.tsx  ModSearch.module.css  ModSearch.tsx  StatusBar.module.css  StatusBar.tsx
src/enums/: ListSortOrder.ts
src/i18n/: i18n.ts
src/styles/: App.css  Markdown.css  Theme.css
src/utils/: router.ts  utils.ts
src/widgets/: AsyncButton.module.css  AsyncButton.tsx  Checkbox.module.css  Checkbox.tsx  ContextMenu.module.css  ContextMenu.tsx  Dialog.module.css  Dialog.tsx  MultistageModel.tsx  Progress.tsx  SelectDropdown.module.css  SelectDropdown.tsx  SortableList.tsx  TabRenderer.tsx  TogglableDropdown.module.css  TogglableDropdown.tsx  ToggleSwitch.tsx  Tooltip.tsx
wrapper-stage2/: build.zig  build.zig.zon
wrapper-stage2/src/: main.zig
(+54 files in other folders)
