[package]
name = "manderrow"
version = "0.1.0"
description = "A mod manager for Thunderstore games"
authors = ["Jack Huang", "Michael Pfaff"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "manderrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
simd-json = "0.14.3"

bincode = "2.0.0-rc.3"
rkyv = { version = "0.8.9", features = ["uuid-1"] }
rkyv_intern = { git = "https://github.com/rkyv/rkyv_intern", version = "0.1.0" }

vdf = { git = "https://git.pfaff.dev/michael/vdf.rs" }

# general
anyhow = "1.0.94"
blake3 = { version = "1.5.5", features = ["mmap"] }
bytes = "1.8.0"
dirs = "5.0.1"
drop-guard = { git = "https://git.pfaff.dev/michael/drop-guard.rs.git", version = "0.2.0", features = ["tokio1-task"] }
env_logger = "0.11.5"
event-listener = "5.3.1"
futures = "0.3.31"
get-locale = { git = "https://git.pfaff.dev/michael/get-locale.rs", version = "0.1.0" }
ipc-channel = "0.19.0"
lexopt = "0.3.0"
log = { version = "0.4.22", features = ["serde"] }
parking_lot = "0.12.3"
rff = { git = "https://github.com/mpfaff/rff.git" }
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.14.0"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["process"] }
uuid = { version = "1.11.0", features = ["serde"] }

# provides gzip and zip
flate2 = "1.0.35"
zip = "2.2.1"

[target.'cfg(windows)'.dependencies]
registry = "1.3"

[profile.dev]
lto = false
opt-level = 0
debug-assertions = true

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2
