[package]
name = "manderrow"
version = "0.1.0"
description = "A mod manager for Thunderstore games"
authors = ["Jack Huang", "Michael Pfaff"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "manderrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["search-sublime_fuzzy"]

statistics = ["rkyv_intern/statistics"]

search-fuzzy-matcher = ["fuzzy-matcher"]
search-rff = ["rff"]
search-sublime_fuzzy = ["sublime_fuzzy"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
serde_yaml = "0.9.34"
simd-json = "0.14.3"

bincode = "2.0.0-rc.3"
bincode_1 = { package = "bincode", version = "1" }
rkyv = { version = "0.8.10", features = ["smol_str-0_3", "uuid-1"] }
rkyv_intern = { git = "https://github.com/mpfaff/rkyv_intern", version = "0.1.0" }

vdf = { git = "https://git.pfaff.dev/michael/vdf.rs" }

# general
anyhow = "1.0.94"
base64 = "0.22.1"
blake3 = { version = "1.5.5", features = ["mmap", "serde"] }
bytes = "1.8.0"
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
dirs = "6.0.0"
drop-guard = { git = "https://git.pfaff.dev/michael/drop-guard.rs.git", version = "0.2.0", features = ["tokio1-task"] }
event-listener = "5.3.1"
fastrand = "2.3.0"
fs4 = { version = "0.13.1", default-features = false, features = ["tokio"] }
futures = "0.3.31"
fuzzy-matcher = { version = "0.3.7", optional = true }
get-locale = { git = "https://git.pfaff.dev/michael/get-locale.rs", version = "0.1.0" }
hashbrown = "0.15.2"
ipc-channel = "0.19.0"
itertools = "0.13.0"
lexopt = "0.3.0"
parking_lot = "0.12.3"
pin-project-lite = "0.2.16"
# using features specified by tauri-plugin-http
reqwest = { version = "0.12.12", features = ["stream"], default-features = false }
rff = { git = "https://github.com/mpfaff/rff.git", optional = true }
slog = "2.7.0"
slog-envlogger = "2.2.0"
slog-scope = "4.4.0"
smol_str = { version = "0.3.2", features = ["serde"] }
strum = { version = "0.26.3", features = ["derive"] }
sublime_fuzzy = { version = "0.7.0", optional = true }
tempfile = "3.14.0"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["process"] }
tokio-util = { version = "0.7.13", features = ["compat", "io"] }
trie-rs = "0.4.2"
triomphe = "0.1.14"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde"] }
walkdir = "2.5.0"

# provides gzip and zip
async-compression = { version = "0.4.18", features = ["gzip", "tokio"] }
flate2 = "1.0.35"
zip = "2.2.1"

[target.'cfg(windows)'.dependencies]
registry = "1.3"
windows = { version = "0.59.0", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.169"

[target.'cfg(target_os = "linux")'.dependencies]
nc = "0.9.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2.2"

[profile.dev]
lto = false
opt-level = 0
debug-assertions = true

[profile.dev.package."*"]
opt-level = 1

[profile.dev.build-override]
opt-level = 2
