[package]
name = "manderrow-agent"
version = "0.1.0"
authors.workspace = true
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
manderrow-args = { path = "../args" }
manderrow-ipc = { path = "../ipc" }
manderrow-types = { path = "../types" }

lexopt = "0.3.1"
thiserror = "2.0.12"

uuid = "1.11"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

slog = "2.7.0"
slog-envlogger = "2.2.0"
slog-scope = "4.4.0"
slog-term = "2.9.1"

ctor = "0.4.1"
libloading = "0.8"
no-panic = "0.1.35"

tokio = { version = "1.42.0", features = ["rt"] }
