[package]
name = "manderrow-ipc"
version = "0.1.0"
authors.workspace = true
edition = "2024"

[dependencies]
thiserror = "2"

bincode = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1.11.0", features = ["serde"] }

ipc-channel = { git = "https://github.com/manderrow/ipc-channel", version = "0.19.0" }

slog = "2.7.0"
