[package]
name = "manderrow-process-util"
version = "0.1.0"
authors.workspace = true
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "2"

itoa = "1"

slog = "2.7.0"

serde = { version = "1", features = ["derive"] }

tokio = { version = "1.44.2", features = ["process", "rt", "time"] }
rkyv = { version = "0.8.10", default-features = false, features = ["bytecheck"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.0", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_System_SystemServices", "Win32_System_Threading"] }
winsafe = { version = "0.0.25", features = ["kernel"] }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "1", features = ["event", "process"] }
