[package]
name = "manderrow-types"
version = "0.1.0"
authors.workspace = true
edition = "2024"

[dependencies]
packed-semver = { path = "../packed-semver" }

chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
smol_str = { version = "0.3.2", features = ["serde"] }
uuid = "1.11"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rkyv = { version = "0.8.10", features = ["smol_str-0_3", "uuid-1"] }
rkyv_intern = { git = "https://github.com/mpfaff/rkyv_intern", version = "0.1.0" }

strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.12"
